<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/button_advertise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_advertise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_custom_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_custom_ros_message"
        app:layout_constraintTop_toBottomOf="@id/button_advertise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_custom_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/default_custom_message" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_publish_custom_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_publish_custom_message"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_custom_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>