<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Default types -->
    <Spinner
        android:id="@+id/spinner_message_base_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Topic Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_topic_name"
        app:layout_constraintTop_toBottomOf="@id/spinner_message_base_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Message Content Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_message_content"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Add Button -->
    <Button
        android:id="@+id/button_add_publisher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- List of Custom Publisher Buttons -->
    <LinearLayout
        android:id="@+id/layout_custom_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/button_add_publisher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>